<resources>
    <string name="app_name">Ez-Attend</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="check_in"> Check In </string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="welcome_professor">Welcome, Professor</string>
    <string name="main_menu">Main Menu</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="teacher_take_attendance">Take Attendance</string>
    <string name="attendance_records">Attendance Records</string>
    <string name="welcome_student">Welcome, Student</string>
    <string name="my_home">My Home</string>
    <string name="title_activity_class_list">ClassListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- These are used by the student class activity to show the status of a students to each
     session-->
    <string name="attendance_present">Present</string>
    <string name="attendance_late">Late</string>
    <string name="attendance_absent">Absent</string>
    <string name="attendance_loading">Loading&#8230;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_student">Add Student</string>
    <string name="add_class">Create Class</string>
    <string name="join_class">Join Class</string>
    <string name="class_id">Class ID</string>
    <string name="class_name">Class Name</string>
    <string name="export_attendance">Export Attendance</string>
    <string name="temp">temp</string>
    <string name="mark_present">Mark Present</string>
    <string name="mark_late">Mark Late</string>
    <string name="mark_absent">Mark Absent</string>
    <string name="class_id_2">Class ID:</string>
</resources>
