<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassFragments.TeacherClassFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/takeAttendanceButton"
            style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:drawableLeft="@drawable/ic_action_flash"
            android:gravity="center|right"
            android:text="@string/teacher_take_attendance"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/attendanceRecordsButton"
            style="@style/FirebaseUI.Button.AccountChooser.AnonymousButton"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:drawableLeft="@drawable/ic_action_bargraph"
            android:gravity="center|right"
            android:text="@string/attendance_records"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/takeAttendanceButton" />

        <Button
            android:id="@+id/exportRecordsButton"
            style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:drawableLeft="@drawable/ic_action_download"
            android:gravity="center|right"
            android:text="@string/attendance_records"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendanceRecordsButton" />

        <Button
            android:id="@+id/addStudentButton"
            style="@style/FirebaseUI.Button.AccountChooser.TwitterButton"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:drawableLeft="@drawable/ic_person_add"
            android:gravity="center|right"
            android:text="@string/add_student"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exportRecordsButton" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>